# forcealign

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
data/corpus/: en.vcb  en.vcb.classes  en.vcb.classes.cats  fr.vcb  fr.vcb.classes  fr.vcb.classes.cats
data/giza.en-fr/: en-fr.D4.final  en-fr.a3.final  en-fr.d4.final
data/giza.fr-en/: fr-en.D4.final  fr-en.d4.final
java/: Makefile  example.java  example.sh  javaforcealigner.i
perl/: Makefile  aligned.test.txt  example.pl  example.sh  example2.pl  perlforcealigner.i
src/: Array2.h  D4Tables.h  ForceAligner.cpp  ForceAligner.h  Makefile.am  Makefile.in  NTables.h  SymForceAligner.cpp  SymForceAligner.h  TTables.h  Vector.h  forcealign.cpp  getSentence.cpp  getSentence.h  main.cpp  model3.cpp  model3.h  model3_viterbi_with_tricks.cpp  test1.txt  test2.txt  transpair_model3.cpp  vocab.h
